# OtusQtLearning

./: .gitignore  README.md
calculator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
painter/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  progreswidget.cpp  progreswidget.h
